# mawi_frag_analyzer

./: .gitignore  LICENSE-MIT  README.md
commands/: commands_00_pcap_preprocessing.md  commands_01_pcap_analyzer.md  commands_02_capinfo.md  commands_03_output_csv.md  commands_04_output_plot.md
tools/mawi_frag_analyzer_rs/: Cargo.toml
tools/mawi_frag_analyzer_rs/src/lib/: lib.rs
tools/scripts/capinfo/: decompress_pcap_tmp.sh  get_capinfos_from_filter.sh  get_capinfos_from_filters.sh
tools/scripts/misc/: common.py
tools/scripts/output_csv/: build_overlap_duplicate_portions_csv.py  compute_series_kind_nb.py  generate_csv_ipv4_frag_stats_filter.py  generate_csv_ipv4_frag_stats_filters.sh  populate_csv_range_datagram_size.py
tools/scripts/output_plot/: generate_plot_and_csv_host_diversity.py  generate_plot_and_csv_range_datagram_size.py  generate_plot_ipv4_frag_stats_filter.py  generate_plot_ipv4_frag_stats_filters.sh  generate_scatter_host_diversity.py  plot_guessed_datagram_size_heatmap.py  plot_host_mdl_estimate_ecdf.py  plot_host_mdl_estimate_years.py  plot_l4_proto_stack_chart.py  plot_max_frag_size_heatmap.py  plot_serie_evolution.py  plot_services_from_serie_kind.py
tools/scripts/pcap_analyzer/: analyze_packets.sh  filter_three_tuple_frag_stats_with_ts_in_start_end.sh  merge_flows_within_time_window.sh
tools/scripts/pcap_preprocessing/: build_symbolic_link_directory.sh  build_symbolic_link_directory_for_long_traces.sh  build_trace_ts_start_end.sh  extract_corrupted_pcap_files.sh  generate_random_dates_csv.py  get_random_subtrace_from_long_traces.py
